* Ensure Element.Methods.Simulated.hasAttribute() returns a boolean value. [jddalton]

* Ensure Array#intersect returns correct result if intersect value is 0. [jddalton]

* Ensure Element#hide and Element#show return an element, even if passed an element ID. [jddalton]

* Ensure IE $(form).readAttribute('id') behaves properly when child element has id='id' or name='id'. Closes #11092. [#89 state:resolved] [jddalton]

* Stop Form.Element.disable from stealing focus. Closes #11214. [kangax, sjoekie]

* Ensure String#escapeHTML escapes double quotes. Closes #10622. [kangax]

* Make String#extractScripts remove commented out scripts and remove the "m" RegExp flag from String#(extractScripts|stripScripts). Closes #9599. [bubbatls, jddalton]

* Fix scriptFragment Safari bug with non-ASCII characters in scripts. Closes #9663. [Alexey Proskuryakov, jddalton]

* Remove the use of $() in Element#hasAttribute methods to keep Selector class speedy. [Andrew Dupont]

* Ensure Element methods run the element argument through $(). Closes #11472. [jddalton]

* Set document.loaded = true before firing dom:loaded custom event. Closes #11453. [choppsta, jddalton]

* Avoid potential memory leaks in Firefox. [#12 state:resolved] [wpc, Tobie Langel]

* unit test: Add more unit tests for Object.isHash. [Tobie Langel]

* Fix Element#getStyle returns null if value is "auto" in browsers supporting getComputedStyle(). Closes #10116. [kangax, ylucas]

* unit test: Add unit tests for #10150, no patch needed because issue is already resolved. [jddalton] 

* Fix Element read/write attribute methods for the 'encType' form attribute in IE. Closes #11126. [kangax, NoiseEee]

* Element#down on an input element should not raise error. Closes #11102. [humeniuc, kangax]

* Make Function#argumentNames handle multiple spaces and line breaks between arguments. [#63 state:resolved] [Geoff M. Granum, Tobie Langel]

* Speed up Function#argumentNames. Avoid Enum dependency. [Samuel Lebeau, Tobie Langel]
